updating text cleaning & processing notebook

--- a/notebooks/NLP - Text Cleaning & Processing.ipynb
+++ b/notebooks/NLP - Text Cleaning & Processing.ipynb
@@ -122,6 +122,8 @@
       "source": [
         "spark = SparkSession \\\n",
         "    .builder \\\n",
+        "    .config(\"spark.driver.memory\", \"10g\") \\\n",
+        "    .config(\"spark.jars\", \"postgresql-42.6.0.jar\") \\\n",
         "    .appName(\"Yelp Review Sense - NLP - Text Cleaning & Processing\") \\\n",
         "    .getOrCreate()"
       ]
