--- a/notebooks/ETL.ipynb
+++ b/notebooks/ETL.ipynb
@@ -130,7 +130,7 @@
         "    .builder \\\n",
         "    .config(\"spark.driver.memory\", \"10g\") \\\n",
         "    .config(\"spark.jars\", \"postgresql-42.6.0.jar\") \\\n",
-        "    .appName(\"Yelp Review Sense\") \\\n",
+        "    .appName(\"Yelp Review Sense by Yash Raizada\") \\\n",
         "    .getOrCreate()"
       ]
     },
